config/metrics-service.yaml
# Copyright 2025 The Tekton Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---

apiVersion: v1
kind: Service
metadata:
  name: tekton-pruner-controller-metrics
  namespace: tekton-pipelines
  labels:
    app: controller
    pruner.tekton.dev/release: "devel"
    app.kubernetes.io/name: tekton-pruner
    app.kubernetes.io/component: controller
    app.kubernetes.io/part-of: tekton-pruner
spec:
  ports:
  - name: http-metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
  - name: http-profiling
    port: 8008
    protocol: TCP
    targetPort: 8008
  selector:
    app: controller
