config/webhook-validation.yaml
# Copyright 2025 The Tekton Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---

apiVersion: v1
kind: Service
metadata:
  name: tekton-pruner-webhook
  namespace: tekton-pipelines
  labels:
    app.kubernetes.io/part-of: tekton-pruner
    app.kubernetes.io/component: webhook
spec:
  selector:
    app.kubernetes.io/part-of: tekton-pruner
    app.kubernetes.io/component: webhook
  ports:
  - port: 443
    targetPort: 8443
    protocol: TCP
    name: webhook

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-pruner-webhook
  namespace: tekton-pipelines
  labels:
    app.kubernetes.io/part-of: tekton-pruner
    app.kubernetes.io/component: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: tekton-pruner
      app.kubernetes.io/component: webhook
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: tekton-pruner
        app.kubernetes.io/component: webhook
    spec:
      serviceAccountName: tekton-pruner-webhook
      containers:
      - name: webhook
        image: gcr.io/tekton-releases/github.com/openshift-pipelines/tektoncd-pruner/cmd/webhook:latest
        ports:
        - containerPort: 8443
          name: webhook
        volumeMounts:
        - name: certs
          mountPath: /etc/certs
          readOnly: true
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
      volumes:
      - name: certs
        secret:
          secretName: tekton-pruner-webhook-certs
